@@ -1,20 +1,0 @@
-The xcb-util module provides a number of libraries which sit on top of
-libxcb, the core X protocol library, and some of the extension
-libraries. These experimental libraries provide convenience functions
-and interfaces which make the raw X protocol more usable. Some of the
-libraries also provide client-side code which is not strictly part of
-the X protocol but which have traditionally been provided by Xlib.
-
-These libraries are currently included, roughly ordered by maturity:
-
-render-util: Convenience functions for the Render extension.
-aux: Convenient access to connection setup and some core requests.
-atom: Standard core X atom constants and atom caching.
-property: Callback X property-change handling.
-icccm: Both client and window-manager helpers for ICCCM.
-keysyms: Standard X key constants and conversion to/from keycodes.
-event: Callback X event handling.
-image: Port of Xlib's XImage and XShmImage functions.
-wm: Framework for window manager implementation.
-
-This package contains the old 0.3.6 release.
