@@ -1,30 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1 2012/07/13 14:19:47 wiz Exp $
-xcb-util036/include/xcb/xcb_atom.h
-xcb-util036/include/xcb/xcb_aux.h
-xcb-util036/include/xcb/xcb_bitops.h
-xcb-util036/include/xcb/xcb_event.h
-xcb-util036/include/xcb/xcb_icccm.h
-xcb-util036/include/xcb/xcb_image.h
-xcb-util036/include/xcb/xcb_keysyms.h
-xcb-util036/include/xcb/xcb_pixel.h
-xcb-util036/include/xcb/xcb_property.h
-xcb-util036/include/xcb/xcb_renderutil.h
-xcb-util036/include/xcb/xcb_reply.h
-xcb-util036/lib/libxcb-atom.la
-xcb-util036/lib/libxcb-aux.la
-xcb-util036/lib/libxcb-event.la
-xcb-util036/lib/libxcb-icccm.la
-xcb-util036/lib/libxcb-image.la
-xcb-util036/lib/libxcb-keysyms.la
-xcb-util036/lib/libxcb-property.la
-xcb-util036/lib/libxcb-render-util.la
-xcb-util036/lib/libxcb-reply.la
-xcb-util036/lib/pkgconfig/xcb-atom.pc
-xcb-util036/lib/pkgconfig/xcb-aux.pc
-xcb-util036/lib/pkgconfig/xcb-event.pc
-xcb-util036/lib/pkgconfig/xcb-icccm.pc
-xcb-util036/lib/pkgconfig/xcb-image.pc
-xcb-util036/lib/pkgconfig/xcb-keysyms.pc
-xcb-util036/lib/pkgconfig/xcb-property.pc
-xcb-util036/lib/pkgconfig/xcb-renderutil.pc
-xcb-util036/lib/pkgconfig/xcb-reply.pc
