@@ -1,6 +1,0 @@
-$NetBSD: distinfo,v 1.2 2015/11/04 03:28:58 agc Exp $
-
-SHA1 (xcb-util-0.3.6.tar.bz2) = 8585a421c077382937d181b921263fac2e448d31
-RMD160 (xcb-util-0.3.6.tar.bz2) = 853e53493c67d56a4ce368cc6b9512c247fc840f
-SHA512 (xcb-util-0.3.6.tar.bz2) = 7e406b2004bab9585ac122f84d99273d0335936ff535403d53a2b256f920a50c61752590c88a067d70068b6752fcb892db4f6b50ceb96d24c7440a6af7c5dadf
-Size (xcb-util-0.3.6.tar.bz2) = 293408 bytes
